@@ -70,6 +70,7 @@ o added timestamp in installation logs
 36. qmail-remote.c: BUG qmail-remote trying SMTP AUTH when it shouldn't
     [25] https://sourceforge.net/p/indimail/support-requests/25/
 37. drate.c: added missing call to uidinit()
+38. smtpd.c: refactored error logging using die_read, die_write
 
 * Sun Apr 23 2023 17:51:54 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.3-1.1%{?dist}
 Release 3.0.3-1.1 Start 01/02/2023 End 23/04/2023
